# disas

./: .editorconfig  CMakeLists.txt  README.md  disas.sln
.github/workflows/: cmake-multi-platform.yml
disas/: CMakeLists.txt  MAIN.c  arch.h  defs.h  disas.vcxproj  disas.vcxproj.filters  fileutils.c  fileutils.h  i386.h  logging.h  magic.h  x86_64.h
